freedreno/a6xx: Assertion `view->rsc_seqno == rsc->seqno' failed.
I think this is specific to devices with has_z24uint_s8uint
(a6xx subgen 2+). Can be triggered by KHR-GL45.stencil_texturing.functional
. The same assert was somehow triggered by sway (but don't have the backtrace)
(gdb)
#5 0x0000007ff68ec348 in build_texture_state (ctx=0x2fa56e0, type=MESA_SHADER_VERTEX, tex=0x2fa6330)
at ../src/gallium/drivers/freedreno/a6xx/fd6_texture.cc:614
614 assert(view->rsc_seqno == rsc->seqno);
(gdb) print rsc->seqno
$1 = 15
(gdb) print view->rsc_seqno
$2 = 0
(gdb) bt
#0 0x0000007ff7816c28 in __pthread_kill_implementation () from /lib64/libc.so.6
#1 0x0000007ff77cee00 in raise () from /lib64/libc.so.6
#2 0x0000007ff77bb284 in abort () from /lib64/libc.so.6
#3 0x0000007ff77c84f8 in __assert_fail_base () from /lib64/libc.so.6
#4 0x0000007ff77c8560 in __assert_fail () from /lib64/libc.so.6
#5 0x0000007ff68ec348 in build_texture_state (ctx=0x2fa56e0, type=MESA_SHADER_VERTEX, tex=0x2fa6330)
at ../src/gallium/drivers/freedreno/a6xx/fd6_texture.cc:614
#6 0x0000007ff68ebc94 in fd6_texture_state (ctx=0x2fa56e0, type=MESA_SHADER_VERTEX)
at ../src/gallium/drivers/freedreno/a6xx/fd6_texture.cc:775
#7 0x0000007ff68a533c in tex_state (ctx=0x2fa56e0, type=MESA_SHADER_VERTEX)
at ../src/gallium/drivers/freedreno/a6xx/fd6_emit.cc:63
#8 0x0000007ff68a08a8 in fd6_emit_3d_state (ring=0x3869240, emit=0x7fffffc500)
at ../src/gallium/drivers/freedreno/a6xx/fd6_emit.cc:648
#9 0x0000007ff6896238 in fd6_draw_vbos (ctx=0x2fa56e0, info=0x7fffffc8c0, drawid_offset=0, indirect=0x0, draws=0x7fffffc8b4,
num_draws=1, index_offset=0) at ../src/gallium/drivers/freedreno/a6xx/fd6_draw.cc:347
#10 0x0000007ff67ff928 in fd_draw_vbo (pctx=0x2fa56e0, info=0x7fffffc8c0, drawid_offset=0, indirect=0x0, draws=0x7fffffc8b4,
num_draws=1) at ../src/gallium/drivers/freedreno/freedreno_draw.c:387
#11 0x0000007ff6a4f7d4 in util_draw_arrays_instanced (pipe=0x2fa56e0, mode=PIPE_PRIM_TRIANGLE_FAN, start=0, count=4,
start_instance=0, instance_count=1) at ../src/gallium/auxiliary/util/u_draw.h:119
#12 0x0000007ff6a4b4c4 in blitter_draw (ctx=0x30d0d20, vertex_elements_cso=0x30d39d0,
get_vs=0x7ff6a4eb9c <get_vs_passthrough_pos_generic>, x1=0, y1=0, x2=8, y2=8, depth=0, num_instances=1)
at ../src/gallium/auxiliary/util/u_blitter.c:1428
#13 0x0000007ff6a48820 in util_blitter_draw_rectangle (blitter=0x30d0d20, vertex_elements_cso=0x30d39d0,
get_vs=0x7ff6a4eb9c <get_vs_passthrough_pos_generic>, x1=0, y1=0, x2=8, y2=8, depth=0, num_instances=1,
type=UTIL_BLITTER_ATTRIB_TEXCOORD_XY, attrib=0x7fffffca50) at ../src/gallium/auxiliary/util/u_blitter.c:1471
#14 0x0000007ff6a4fa74 in blitter_draw_tex (ctx=0x30d0d20, dst_x1=0, dst_y1=0, dst_x2=8, dst_y2=8, src=0x386bb20, src_width0=8,
src_height0=8, src_x1=0, src_y1=0, src_x2=8, src_y2=8, layer=0, sample=0, uses_txf=true,
type=UTIL_BLITTER_ATTRIB_TEXCOORD_XY) at ../src/gallium/auxiliary/util/u_blitter.c:1844
#15 0x0000007ff6a4e314 in do_blits (ctx=0x30d0d20, dst=0x381e570, dstbox=0x7fffffd154, src=0x386bb20, src_width0=8,
src_height0=8, srcbox=0x7fffffd174, is_zsbuf=false, uses_txf=true, sample0_only=false, dst_sample=0)
at ../src/gallium/auxiliary/util/u_blitter.c:1892
#16 0x0000007ff6a4d798 in util_blitter_blit_generic (blitter=0x30d0d20, dst=0x381e570, dstbox=0x7fffffd154, src=0x386bb20,
srcbox=0x7fffffd174, src_width0=8, src_height0=8, mask=15, filter=0, scissor=0x0, alpha_blend=false, sample0_only=false,
dst_sample=0) at ../src/gallium/auxiliary/util/u_blitter.c:2225
#17 0x0000007ff68f9b0c in fd_blitter_blit (ctx=0x2fa56e0, info=0x7fffffd148)
at ../src/gallium/drivers/freedreno/freedreno_blitter.c:166
#18 0x0000007ff6889914 in handle_zs_blit (ctx=0x2fa56e0, info=0x7fffffd250)
at ../src/gallium/drivers/freedreno/a6xx/fd6_blitter.cc:1202
#19 0x0000007ff6885c00 in fd6_blit (ctx=0x2fa56e0, info=0x7fffffd250)
at ../src/gallium/drivers/freedreno/a6xx/fd6_blitter.cc:1283
#20 0x0000007ff68faed4 in fd_blit (pctx=0x2fa56e0, blit_info=0x7fffffd3e8)
at ../src/gallium/drivers/freedreno/freedreno_blitter.c:295
#21 0x0000007ff680e2bc in do_blit (ctx=0x2fa56e0, blit=0x7fffffd3e8, fallback=false)
at ../src/gallium/drivers/freedreno/freedreno_resource.c:256
#22 0x0000007ff680b6d4 in fd_try_shadow_resource (ctx=0x2fa56e0, rsc=0x3866da0, level=0, box=0x0, modifier=360287974484606975)
at ../src/gallium/drivers/freedreno/freedreno_resource.c:511
#23 0x0000007ff680ad60 in fd_resource_uncompress (ctx=0x2fa56e0, rsc=0x3866da0, linear=false)
at ../src/gallium/drivers/freedreno/freedreno_resource.c:572
#24 0x0000007ff68ea6dc in fd6_validate_format (ctx=0x2fa56e0, rsc=0x3866da0, format=PIPE_FORMAT_X24S8_UINT)
at ../src/gallium/drivers/freedreno/a6xx/fd6_resource.cc:214
#25 0x0000007ff68ecedc in fd6_set_sampler_views (pctx=0x2fa56e0, shader=MESA_SHADER_VERTEX, start=0, nr=1,
unbind_num_trailing_slots=0, take_ownership=true, views=0x30e3ec0)
at ../src/gallium/drivers/freedreno/a6xx/fd6_texture.cc:466
#26 0x0000007ff665110c in tc_call_set_sampler_views (pipe=0x2fa56e0, call=0x30e3eb8, last=0x30e4070)
at ../src/gallium/auxiliary/util/u_threaded_context.c:1834
#27 0x0000007ff66502f8 in batch_execute (batch=0x30e3d80, pipe=0x2fa56e0, last=0x30e4070, parsing=false)
at ../src/gallium/auxiliary/util/u_threaded_context.c:394
#28 tc_batch_execute (job=0x30e3d80, gdata=0x0, thread_index=0) at ../src/gallium/auxiliary/util/u_threaded_context.c:445
#29 0x0000007ff66453f4 in _tc_sync (tc=0x30e1d00, info=0x7ff6b26694 "texture", func=0x7ff6eb459a "tc_texture_map")
at ../src/gallium/auxiliary/util/u_threaded_context.c:680
#30 0x0000007ff664d9f4 in tc_texture_map (_pipe=0x30e1d00, resource=0x3813d20, level=0, usage=1, box=0x7fffffdb68,
transfer=0x7fffffdc70) at ../src/gallium/auxiliary/util/u_threaded_context.c:2754
#31 0x0000007ff5c37510 in pipe_texture_map_3d (context=0x30e1d00, resource=0x3813d20, level=0, access=1, x=0, y=0, z=0, w=8,
--Type <RET> for more, q to quit, c to continue without paging--
h=8, d=1, transfer=0x7fffffdc70) at ../src/gallium/auxiliary/util/u_inlines.h:579
#32 0x0000007ff5c37438 in st_texture_image_map (st=0x30a0af0, stImage=0x381df00, usage=PIPE_MAP_READ, x=0, y=0, z=0, w=8, h=8,
d=1, transfer=0x7fffffdc70) at ../src/mesa/state_tracker/st_texture.c:315
#33 0x0000007ff5bf6894 in st_MapTextureImage (ctx=0x3116110, texImage=0x381df00, slice=0, x=0, y=0, w=8, h=8, mode=1,
mapOut=0x7fffffdd18, rowStrideOut=0x7fffffdd14) at ../src/mesa/state_tracker/st_cb_texture.c:543
#34 0x0000007ff613c74c in get_tex_memcpy (ctx=0x3116110, xoffset=0, yoffset=0, zoffset=0, width=8, height=8, depth=1,
format=36244, type=5121, pixels=0x386ca60, texImage=0x381df00) at ../src/mesa/main/texgetimage.c:661
#35 0x0000007ff613c2f4 in _mesa_GetTexSubImage_sw (ctx=0x3116110, xoffset=0, yoffset=0, zoffset=0, width=8, height=8, depth=1,
format=36244, type=5121, pixels=0x386ca60, texImage=0x381df00) at ../src/mesa/main/texgetimage.c:738
#36 0x0000007ff5bface8 in st_GetTexSubImage (ctx=0x3116110, xoffset=0, yoffset=0, zoffset=0, width=8, height=8, depth=1,
format=36244, type=5121, pixels=0x386ca60, texImage=0x381df00) at ../src/mesa/state_tracker/st_cb_texture.c:2716
#37 0x0000007ff613e1cc in get_texture_image (ctx=0x3116110, texObj=0x3814eb0, target=3553, level=0, xoffset=0, yoffset=0,
zoffset=0, width=8, height=8, depth=1, format=36244, type=5121, pixels=0x386ca60, caller=0x7ff6b35493 "glGetTexImage")
at ../src/mesa/main/texgetimage.c:1441
#38 0x0000007ff613d724 in _get_texture_image (ctx=0x3116110, texObj=0x3814eb0, target=3553, level=0, format=36244, type=5121,
bufSize=2147483647, pixels=0x386ca60, caller=0x7ff6b35493 "glGetTexImage") at ../src/mesa/main/texgetimage.c:1479
#39 0x0000007ff613d7d8 in _mesa_GetTexImage (target=3553, level=0, format=36244, type=5121, pixels=0x386ca60)
at ../src/mesa/main/texgetimage.c:1514
#40 0x0000007ff76eace4 in shared_dispatch_stub_281 (target=3553, level=0, format=36244, type=5121, pixels=0x386ca60)
at src/mapi/shared-glapi/glapi_mapi_tmp.h:22270
#41 0x000000000066f790 in gl4cts::StencilTexturing::FunctionalTest::verifyTexture (this=this@entry=0x30b4be0, id=id@entry=3,
source_internal_format=source_internal_format@entry=35056, is_stencil=is_stencil@entry=true,
src_texture_data=std::vector of length 256, capacity 256 = {...})
at /home/robclark/src/deqp/external/openglcts/modules/gl/gl4cStencilTexturingTests.cpp:1127
#42 0x00000000006701fc in gl4cts::StencilTexturing::FunctionalTest::test (this=this@entry=0x30b4be0,
internal_format=internal_format@entry=35056, is_stencil=is_stencil@entry=true)
at /home/robclark/src/deqp/external/openglcts/modules/gl/gl4cStencilTexturingTests.cpp:1245
#43 0x0000000000670530 in gl4cts::StencilTexturing::FunctionalTest::iterate (this=0x30b4be0)
at /home/robclark/src/deqp/external/openglcts/modules/gl/gl4cStencilTexturingTests.cpp:607
#44 0x000000000043bffc in gl3cts::TestCaseWrapper::iterate (this=0x2f77670, testCase=0x30b4be0)
at /home/robclark/src/deqp/external/openglcts/modules/gl/gl3cTestPackages.cpp:98
#45 0x0000000001e158b8 in tcu::TestSessionExecutor::iterateTestCase (this=this@entry=0x2f77550, testCase=0x30b4be0)
at /home/robclark/src/deqp/framework/common/tcuTestSessionExecutor.cpp:334
#46 0x0000000001e15a14 in tcu::TestSessionExecutor::iterate (this=0x2f77550)
at /home/robclark/src/deqp/framework/common/tcuTestSessionExecutor.cpp:139
#47 0x0000000001df0d20 in tcu::App::iterate (this=this@entry=0x2f73d70)
at /home/robclark/src/deqp/framework/common/tcuApp.cpp:224
#48 0x0000000000410130 in main (argc=<optimized out>, argv=<optimized out>)
at /home/robclark/src/deqp/framework/platform/tcuMain.cpp:58